external-crates/move/crates/move-compiler/tests/move_2024/typing/use_lambda_outside_call_invalid.exp
error[E04030]: invalid usage of lambda type
  ┌─ tests/move_2024/typing/use_lambda_outside_call_invalid.move:3:13
  │
3 │         let x = f;
  │             ^ Unexpected lambda type. Lambdas can only be used as parameters for, or direct arguments to, macro functions

error[E04030]: invalid usage of lambda type
  ┌─ tests/move_2024/typing/use_lambda_outside_call_invalid.move:8:13
  │
8 │         f = || 0;
  │             ^^^^ Unexpected lambda type. Lambdas can only be used as parameters for, or direct arguments to, macro functions

error[E04031]: invalid usage of lambda
  ┌─ tests/move_2024/typing/use_lambda_outside_call_invalid.move:8:13
  │
8 │         f = || 0;
  │             ^^^^ Lambdas can only be used directly as arguments to macro functions

error[E04030]: invalid usage of lambda type
   ┌─ tests/move_2024/typing/use_lambda_outside_call_invalid.move:12:14
   │
12 │         foo!(|| 0);
   │              ^^^^ Unexpected lambda type. Lambdas can only be used as parameters for, or direct arguments to, macro functions

error[E04030]: invalid usage of lambda type
   ┌─ tests/move_2024/typing/use_lambda_outside_call_invalid.move:13:14
   │
13 │         bar!(|| 0);
   │              ^^^^ Unexpected lambda type. Lambdas can only be used as parameters for, or direct arguments to, macro functions

